--- a/src/App.css
+++ b/src/App.css
@@ -1,109 +1,156 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  background-color: #0b2434;
-  padding: 20px;
-  font-family: "Karla", sans-serif;
-  display: flex;
-  justify-content: center;
+	margin: 0;
+	background-color: #0b2434;
+	padding: 20px;
+	font-family: "Karla", sans-serif;
+	display: flex;
+	justify-content: center;
 }
 
 main {
-  background-color: #94f3fa;
-  height: 700px;
-  max-width: 800px;
-  border-radius: 5px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+	background-color: #94f3fa;
+	height: fit;
+	max-width: 800px;
+	border-radius: 5px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .title {
-  font-size: 40px;
-  margin: 0;
+	font-size: 40px;
+	margin: 0;
 }
 
 .instructions {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  margin-top: 0;
-  text-align: center;
+	font-family: "Inter", sans-serif;
+	font-weight: 400;
+	margin-top: 0;
+	text-align: center;
 }
 
-.counter, .timer {
-  font-size: 1.2rem;
-  font-weight: 700;
+.counter,
+.timer {
+	font-size: 1.2rem;
+	font-weight: 700;
 }
 
 .highscores {
-  display: flex;
+	display: flex;
 }
 
 .highscores > p {
-  padding-left: 15px;
-  padding-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 .dice-container {
-  display: grid;
-  grid-template: auto auto / repeat(5, 1fr);
-  gap: 20px;
-  margin-bottom: 40px;
+	display: grid;
+	grid-template: auto auto / repeat(5, 1fr);
+	gap: 20px;
+	margin-bottom: 40px;
 }
 
 .die-face {
-  height: 80px;
-  width: 80px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  overflow: hidden;
+	height: 80px;
+	width: 80px;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	overflow: hidden;
 }
 
 .button-container {
-  display: flex;
-  flex-direction: column;
-  align-items:center;
-  justify-content: space-between;
-  width: 600px;
-  height: 200px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	max-width: 600px;
+	max-height: 200px;
+	gap: 16px;
 }
 
 .roll-dice,
 .restart-game {
-  height: 50px;
-  width: 150px;
-  border: none;
-  border-radius: 6px;
-  background-color: #0792f5;
-  color: white;
-  font-size: 1.2rem;
-  font-family: "Karla", sans-serif;
-  cursor: pointer;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+	height: 50px;
+	width: 150px;
+	border: none;
+	border-radius: 6px;
+	background-color: #0792f5;
+	color: white;
+	font-size: 1.2rem;
+	font-family: "Karla", sans-serif;
+	cursor: pointer;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 }
 
 .roll-dice:focus,
 .restart-game:focus {
-  outline: none;
+	outline: none;
 }
 
 .roll-dice:active,
 .restart-game:active {
-  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+	box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
 .dice-image {
-  width: 80px;
-  height: 80px;
-  border-radius: 10px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+	width: 80px;
+	height: 80px;
+	border-radius: 10px;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+}
+
+@media only screen and (max-width: 560px) {
+	.title {
+		font-size: 30px;
+	}
+
+	.instructions {
+		font-size: 0.8rem;
+		margin-top: 6px;
+	}
+
+	.highscores {
+		text-align: center;
+	}
+
+	.counter,
+	.timer {
+		margin: 6px;
+	}
+
+	.counter,
+	.timer {
+		font-size: 1rem;
+		font-weight: 700;
+	}
+	.dice-container {
+		gap: 10px;
+		margin: 30px 0;
+	}
+
+	.die-face {
+		height: 50px;
+		width: 50px;
+	}
+	.roll-dice,
+	.restart-game {
+		height: 30px;
+		width: 120px;
+		font-size: 1rem;
+	}
+	.dice-image {
+		width: 50px;
+		height: 50px;
+	}
 }
